--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "movies-explorer-api",
-  "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
     "start": "node app.js",
@@ -27,6 +28,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.2",
     "validator": "^13.7.0",
